<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_med_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_name"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/add_med_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_description" />

        <Spinner
            android:id="@+id/med_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/unit" />

        <EditText
            android:id="@+id/add_dosage_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_dosage" />

        <Spinner
            android:id="@+id/add_med_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/interval" />

        <EditText
            android:id="@+id/med_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/date_of_alarm"
            android:visibility="gone" />

        <EditText
            android:id="@+id/med_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/time_of_alarm" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/save_btn" />


    </LinearLayout>
</ScrollView>